<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="5.25"
        android:scrollbars="vertical"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editExpression"
        style="@style/editExpression"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editExpressionHint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonVoice"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_green"
            android:text="@string/voice" />

        <Button
            android:id="@+id/buttonGesture"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_green"
            android:text="@string/gesture" />

        <Button
            android:id="@+id/buttonChangeKeyboard"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_green"
            android:onClick="changeKeyboard" />
    </LinearLayout>

    <include
        android:id="@+id/include_cursor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/keys_cursor" />

    <include
        android:id="@+id/include_keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/keys_numbers" />

</LinearLayout>